--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -1,5 +1,8 @@
 # CONFIG
 
+# Allow user to override where the build rules come from
+RULES = $(EPICS_BASE)
+
 include $(TOP)/configure/RELEASE
 -include $(TOP)/configure/RELEASE.$(EPICS_HOST_ARCH)
 -include $(TOP)/configure/RELEASE.$(EPICS_HOST_ARCH).Common
@@ -8,15 +11,16 @@ ifdef T_A
 -include $(TOP)/configure/RELEASE.$(EPICS_HOST_ARCH).$(T_A)
 endif
 
-CONFIG=$(EPICS_BASE)/configure
+CONFIG = $(RULES)/configure
 include $(CONFIG)/CONFIG
 
 # Override for definition in base
 INSTALL_LOCATION = $(TOP)
+
+# CONFIG_SITE files contain other build configuration settings
 include $(TOP)/configure/CONFIG_SITE
 -include $(TOP)/configure/CONFIG_SITE.$(EPICS_HOST_ARCH)
 -include $(TOP)/configure/CONFIG_SITE.$(EPICS_HOST_ARCH).Common
-
 ifdef T_A
  -include $(TOP)/configure/CONFIG_SITE.Common.$(T_A)
  -include $(TOP)/configure/CONFIG_SITE.$(EPICS_HOST_ARCH).$(T_A)
