Add stream protocol

--- a/visarCameraApp/srcProtocol/Makefile
+++ b/visarCameraApp/srcProtocol/Makefile
@@ -7,7 +7,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 
 COPY_FILES += visar.proto
-COPY_SUBDIR = protocol
+COPY_SUBDIR = $(TOP)/protocol
 
 include $(TOP)/configure/RULES
 include $(TOP)/configure/RULES.copy
