--- a/visarCameraApp/Db/visarCamera.template
+++ b/visarCameraApp/Db/visarCamera.template
@@ -1,16 +1,20 @@
-  ## visarCamera.template
-  ## Template database file to control the features of a Visar camera.
-  ##
+##
+## visarCamera.template
+## Template database file to control the features of a Visar camera.
+##
 
-  include "ADBase.template"
+include "ADBase.template"
 
+###############################################
+#  Overwrite AreaDetector records             #
+###############################################
 
 #########################################
-#     #
+#  ADAquireTime                         #
 #########################################
 
 record(mbbi, "$(P)$(R)AcquireTimeVisarUnits_RBV") {
-    field(DESC, "Exposure time units")
+    field(DESC, "Exposure time units getter")
     field(ZRST, "us")
     field(ZRVL, "0")
     field(ONST, "ms")
@@ -37,18 +41,18 @@ record(mbbo, "$(P)$(R)AcquireTimeVisarUnits") {
 }
 
 record(ai, "$(P)$(R)AcquireTimeVisar_RBV") {
-    field(DESC, "Visar raw exposure time")
+    field(DESC, "Visar raw exposure time getter")
     field(DTYP, "stream")
-    field(INP, "@visar.proto get_exposure_time($(P)$(R)) $(PORTC) 0")
+    field(INP,  "@visar.proto get_exposure_time($(P)$(R)) $(PORTC) 0")
     field(SCAN, "Passive")
     field(PINI, "NO")
     field(FLNK, "$(P)$(R)AcquireTimeCalc_RBV.PROC")
 }
 
 record(ao, "$(P)$(R)AcquireTimeVisar") {
-    field(DESC, "Visar raw exposure time")
+    field(DESC, "Visar raw exposure time setter")
     field(DTYP, "stream")
-    field(OUT, "@visar.proto set_exposure_time($(P)$(R)) $(PORTC) 0")
+    field(OUT,  "@visar.proto set_exposure_time($(P)$(R)) $(PORTC) 0")
     field(FLNK, "$(P)$(R)AcquireTimeVisar_RBV.PROC")
     field(PINI, "NO")
 }
@@ -58,47 +62,46 @@ record(calcout, "$(P)$(R)AcquireTimeCalc_RBV") {
     field(INPA, "$(P)$(R)AcquireTimeVisar_RBV CPP MS")
     field(INPB, "$(P)$(R)AcquireTimeVisarUnits_RBV CPP MS")
     field(CALC, "(B==0)? A*0.000001 : (B==1)? A*0.001: (B==2)? A: (B==3)? A*60 : -1")
-    field( PREC, "6" )
-    field(EGU, "sec")
-    field(OOPT,"Every Time")
-    field(OUT,"$(P)$(R)AcquireTime_RBV PP")
+    field(PREC, "6" )
+    field(EGU,  "sec")
+    field(OOPT, "Every Time")
+    field(OUT,  "$(P)$(R)AcquireTime_RBV PP")
     field(PINI, "NO")
 }
 
 record(ao, "$(P)$(R)AcquireTime") {
     field(FLNK, "$(P)$(R)AcquireTimeStream.PROC")
+	field(EGU,  "sec")
 }
 
 record(ao, "$(P)$(R)AcquireTimeStream") {
-    field(DESC, "Exposure time stream")
+    field(DESC, "Exposure time StreamDevice")
     field(DTYP, "stream")
-    field(OUT, "@visar.proto set_exposure_time_s($(P)$(R)) $(PORTC) 0")
-    field(EGU, "sec")
+    field(OUT,  "@visar.proto set_exposure_time_s($(P)$(R)) $(PORTC) 0")
+    field(EGU,  "sec")
     field(PINI, "NO")
     field(FLNK, "$(P)$(R)AcquireTimeVisar_RBV.PROC")
 }
 
 #########################################
-#     #
+#  ADGain                               #
 #########################################
 
 record(ai, "$(P)$(R)Gain_RBV") {
-    field(DESC, "II-Gain")
     field(INP,"$(P)$(R)IIGain_RBV CP MS")
     field(PINI, "NO")
 }
 
 record(ao, "$(P)$(R)Gain") {
-    field(DESC, "II-Gain setter")
     field(DTYP, "Soft Channel" )
     field(OUT,"$(P)$(R)IIGain PP")
     field(PINI, "NO")
 }
 
-record(stringin, "$(P)$(R)IIGain_RBV") {
-    field(DESC, "II-Gain")
+record(longin, "$(P)$(R)IIGain_RBV") {
+    field(DESC, "II-Gain getter")
     field(DTYP, "stream")
-    field(INP, "@visar.proto get_II_gain($(P)$(R)) $(PORTC) 0")
+    field(INP,  "@visar.proto get_II_gain($(P)$(R)) $(PORTC) 0")
     field(PINI, "NO")
     field(FLNK, "$(P)$(R)Gain_RBV")
     field(SCAN, "Passive")
@@ -107,24 +110,19 @@ record(stringin, "$(P)$(R)IIGain_RBV") {
 record(longout, "$(P)$(R)IIGain") {
     field(DESC, "II-Gain setter")
     field(DTYP, "stream")
-    field(OUT, "@visar.proto set_II_gain($(P)$(R)) $(PORTC) 0")
+    field(OUT,  "@visar.proto set_II_gain($(P)$(R)) $(PORTC) 0")
     field(FLNK, "$(P)$(R)IIGain_RBV")
     field(PINI, "NO")
 }
 
-
-
-
-# NORMAL
-
 #########################################
-#     #
+#  ADImageMode                          #
 #########################################
 
 record(mbbi, "$(P)$(R)ImageMode_RBV") {
-    field(DESC, "Trigger mode")
+    field(DESC, "Trigger mode getter")
     field(DTYP, "stream")
-    field(INP, "@visar.proto get_trigger_mode($(P)$(R)) $(PORTC) 0")
+    field(INP,  "@visar.proto get_image_mode($(P)$(R)) $(PORTC) 0")
     field(ZRST, "Single")
     field(ZRVL, "0")
     field(ONST, "Continuous")
@@ -138,7 +136,7 @@ record(mbbi, "$(P)$(R)ImageMode_RBV") {
 record(mbbo, "$(P)$(R)ImageMode") {
     field(DESC, "Trigger mode setter")
     field(DTYP, "stream")
-    field(OUT, "@visar.proto set_trigger_mode($(P)$(R)) $(PORTC) 0")
+    field(OUT,  "@visar.proto set_image_mode($(P)$(R)) $(PORTC) 0")
     field(FLNK, "$(P)$(R)ImageMode_RBV")
     field(ZRST, "Single")
     field(ZRVL, "0")
@@ -150,11 +148,11 @@ record(mbbo, "$(P)$(R)ImageMode") {
 }
 
 #########################################
-#     #
+#  ADTriggerMode                        #
 #########################################
 
 record(mbbi, "$(P)$(R)TriggerMode_RBV") {
-    field(DESC, "Mode")
+    field(DESC, "Trigger Mode getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_mode($(P)$(R)) $(PORTC) 0")
     field(ZRST, "Focus")
@@ -166,7 +164,7 @@ record(mbbi, "$(P)$(R)TriggerMode_RBV") {
 }
 
 record(mbbo, "$(P)$(R)TriggerMode") {
-    field(DESC, "Mode setter")
+    field(DESC, "Trigger Mode setter")
     field(DTYP, "stream")
     field(OUT, "@visar.proto set_mode($(P)$(R)) $(PORTC) 0")
     field(FLNK, "$(P)$(R)TriggerMode_RBV")
@@ -177,12 +175,16 @@ record(mbbo, "$(P)$(R)TriggerMode") {
     field(PINI, "NO")
 }
 
+###############################################
+#  Extra Visar parameters                     #
+###############################################
+
 #########################################
-#     #
+# FocusTimeOver                         #
 #########################################
 
 record(longin, "$(P)$(R)FocusTimeOver_RBV") {
-    field(DESC, "Focus Over Time")
+    field(DESC, "Focus Over Time getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_focus_time_over($(P)$(R)) $(PORTC) 0")
     field(PINI, "NO")
@@ -190,7 +192,7 @@ record(longin, "$(P)$(R)FocusTimeOver_RBV") {
 }
 
 record(longout, "$(P)$(R)FocusTimeOver") {
-    field(DESC, "Focus Over Time Setter")
+    field(DESC, "Focus Over Time setter")
     field(DTYP, "stream")
     field(FLNK, "$(P)$(R)FocusTimeOver_RBV")
     field(OUT, "@visar.proto set_focus_time_over($(P)$(R)) $(PORTC) 0")
@@ -198,11 +200,11 @@ record(longout, "$(P)$(R)FocusTimeOver") {
 }
 
 #########################################
-#     #
+#  Shutter                              #
 #########################################
 
 record(mbbi, "$(P)$(R)Shutter_RBV") {
-    field(DESC, "Shutter")
+    field(DESC, "Shutter getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_shutter($(P)$(R)) $(PORTC) 0")
     field(ZRST, "Closed")
@@ -226,11 +228,11 @@ record(mbbo, "$(P)$(R)Shutter") {
 }
 
 #########################################
-#     #
+#  GateMode                             #
 #########################################
 
 record(mbbi, "$(P)$(R)GateMode_RBV") {
-    field(DESC, "Gate mode")
+    field(DESC, "Gate mode getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_gate_mode($(P)$(R)) $(PORTC) 0")
     field(ZRST, "Normal")
@@ -258,11 +260,11 @@ record(mbbo, "$(P)$(R)GateMode") {
 }
 
 #########################################
-#     #
+#  TriggerStatus                        #
 #########################################
 
 record(mbbi, "$(P)$(R)TriggerStatus_RBV") {
-    field(DESC, "Trigger status")
+    field(DESC, "Trigger status getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_trigger_status($(P)$(R)) $(PORTC) 0")
     field(ZRST, "Ready")
@@ -276,7 +278,7 @@ record(mbbi, "$(P)$(R)TriggerStatus_RBV") {
 }
 
 record(mbbo, "$(P)$(R)TriggerStatus") {
-    field(DESC, "Trigger status")
+    field(DESC, "Trigger status setter")
     field(DTYP, "stream")
     field(OUT, "@visar.proto set_trigger_status($(P)$(R)) $(PORTC) 0")
     field(FLNK, "$(P)$(R)TriggerStatus_RBV")
@@ -290,11 +292,11 @@ record(mbbo, "$(P)$(R)TriggerStatus") {
 }
 
 #########################################
-#     #
+#  Time Range                           #
 #########################################
 
 record(mbbi, "$(P)$(R)TimeRange_RBV") {
-    field(DESC, "Time Range")
+    field(DESC, "Time Range getter")
     field(DTYP, "stream")
     field(INP, "@visar.proto get_time_range($(P)$(R)) $(PORTC) 0")
     field(ZRST, "0.5 ns")
@@ -331,6 +333,7 @@ record(mbbi, "$(P)$(R)TimeRange_RBV") {
     field(FFVL, 15)
     field(PINI, "NO")
     field(SCAN, "Passive")
+	field(FLNK, "$(P)$(R)ScalingFileRead")
 }
 
 record(mbbo, "$(P)$(R)TimeRange") {
@@ -373,6 +376,212 @@ record(mbbo, "$(P)$(R)TimeRange") {
     field(PINI, "NO")
 }
 
+###############################################
+#  Visar commands, links to asyn parameters   #
+###############################################
+
+#########################################
+#  Open Application                     #
+#########################################
+
+record(bo, "$(P)$(R)StartAppStream") {
+    field(DESC, "Starts Visar application when processed")
+    field(DESC, "Start App")
+    field(DTYP, "stream")
+    field(OUT,  "@visar.proto start_app($(P)$(R)) $(PORTC) 0")
+    field(PINI, "NO")
+}
+
+record(longout, "$(P)$(R)StartApp") {
+#	field(DESC, "Forces StartAppStream to process")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_START_APP")
+    field(FLNK, "$(P)$(R)StartAppStream.PROC")
+    field(SCAN, "I/O Intr")
+}
+
+#########################################
+#  Close Application                    #
+#########################################
+
+record(bo, "$(P)$(R)StopAppStream") {
+    field(DESC, "Stops Visar application when processed")
+    field(DTYP, "stream")
+    field(OUT,  "@visar.proto stop_app($(P)$(R)) $(PORTC) 0")
+    field(PINI, "NO")
+}
+
+record(longout, "$(P)$(R)StopApp") {
+#	field(DESC, "Stops Visar application when processed. Forces StopAppStream to process")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_STOP_APP")
+    field(FLNK, "$(P)$(R)StopAppStream.PROC")
+    field(SCAN, "I/O Intr")
+}
+
+#########################################
+#  Start Acquisition                    #
+#########################################
+
+record(bo, "$(P)$(R)StartAcquisitionStream") {
+    field(DESC, "Starts acquisition when processed")
+    field(DTYP, "stream")
+    field(OUT, "@visar.proto start_capture($(P)$(R)) $(PORTC) 0")
+    field(PINI, "NO")
+}
+
+record(longout, "$(P)$(R)StartAcquisition") {
+#    field(DESC, "Forces StartAcquisitionStream to process")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_START_ACQ")
+    field(FLNK, "$(P)$(R)StartAcquisitionStream.PROC")
+    field(SCAN, "I/O Intr")
+}
+
+#########################################
+#  Stop Acquisition                    #
+#########################################
+
+record(bo, "$(P)$(R)StopAcquisitionStream") {
+    field(DESC, "Stops acquisition when processed")
+    field(DTYP, "stream")
+    field(OUT, "@visar.proto stop_capture($(P)$(R)) $(PORTC) 0")
+    field(PINI, "NO")
+}
+
+record(longout, "$(P)$(R)StopAcquisition") {
+#    field(DESC, "Forces StopAcquisition to process")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_STOP_ACQ")
+    field(FLNK, "$(P)$(R)StopAcquisitionStream.PROC")
+    field(SCAN, "I/O Intr")
+}
+
+#########################################
+#  Get Frame                            #
+#########################################
+
+record(bo, "$(P)$(R)GetFrameStream") {
+    field(DESC, "Ask for the frame data processed")
+    field(DTYP, "stream")
+    field(OUT, "@visar.proto get_frame($(P)$(R)) $(PORTC) 0")
+    field(PINI, "NO")
+}
+
+record(longout, "$(P)$(R)GetFrame") {
+#    field(DESC, "Forces GetFrameStream to process")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_GET_FRAME")
+    field(FLNK, "$(P)$(R)GetFrameStream.PROC")
+    field(SCAN, "I/O Intr")
+}
+
+
+
+
+
+
+# faltam descricoes
+
+
+####################################################
+#  Visar notifications, links to asyn parameters   #
+####################################################
+
+#########################################
+#  Frame Notification                   #
+#########################################
+
+record(longin, "$(P)$(R)BufferNotificationStream") {
+    field(DTYP, "stream")
+    field(INP,  "@visar.proto buffer_notification($(P)$(R)) $(PORTC2) 0")
+    field(SCAN, "I/O Intr")
+    field(FLNK, "$(P)$(R)BufferNotificationCalc.PROC")
+}
+
+record(longout, "$(P)$(R)BufferNotification") {
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))VC_FRAME_READY")
+}
+
+record(calcout, "$(P)$(R)BufferNotificationCalc") {
+    field(INPA, "$(P)$(R)BufferNotificationStream CPP MS")
+    field(CALC, "A")
+    field(OOPT, "Every Time")
+    field(OUT,  "$(P)$(R)BufferNotification PP")
+    field(PINI, "NO")
+}
+
+#########################################
+#  Frame Rate Notification              #
+#########################################
+
+record(ai, "$(P)$(R)FrameRateNotification") {
+    field(DTYP, "stream")
+    field(INP, "@visar.proto frame_rate_notification($(P)$(R)) $(PORTC2) 0")
+    field(SCAN, "I/O Intr")
+    field(FLNK, "$(P)$(R)FrameRateNotificationCalc.PROC")
+    field(EGU, "HZ")
+}
+
+record(ao, "$(P)$(R)FrameRate") {
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))VC_FRAME_RATE")
+    field(EGU, "HZ")
+}
+
+record(calcout, "$(P)$(R)FrameRateNotificationCalc") {
+    field(INPA, "$(P)$(R)FrameRateNotification CPP MS")
+    field(CALC, "A")
+    field(OOPT,"Every Time")
+    field(OUT,"$(P)$(R)FrameRate PP")
+    field(PINI, "NO")
+}
+
+
+
+####################################################
+#  Time scaling records                            #
+####################################################
+
+#########################################
+#     #
+#########################################
+
+record(stringin, "$(P)$(R)ScalingFilePath") {
+     
+}
+
+#########################################
+#     #
+#########################################
+
+record(aSub,"$(P)$(R)ScalingFileRead") {
+  field(SNAM,"my_asub_routine")
+       field(FTA, "STRING")
+       field(NOA, "1")
+       field(INPA, "$(P)$(R)ScalingFilePath NPP NMS")
+	   field(FTB, "STRING")
+       field(NOB, "1")
+       field(INPB, "$(P)$(R)TimeRange_RBV NPP NMS")
+	   field(FTVA, "DOUBLE")
+       field(NOVA, "1344")
+       field(OUTA, "$(P)$(R)ScalingFileRead.PROC")	
+
+   }
+   
+#########################################
+#     #
+#########################################
+   
+record(waveform,"$(P)$(R)Scaling")
+{
+   field(DESC,"Time scale")
+   field(NELM,"1344")
+   field(FTVL,"DOUBLE")
+   field(PREC,"6")
+   field(EGU,"sec")
+}
 
 
 
@@ -392,159 +601,5 @@ record(mbbo, "$(P)$(R)TimeRange") {
 #    field(SCAN, "Passive")
 #    field(PINI, "NO")
 #}
-
-
-
-#########################################
-#     #
-#########################################
-
-#record(bo, "$(P)$(R)AppStart") {
-#    field(DESC, "Start app")
-#    field(DTYP, "stream")
-#    field(OUT, "@visar.proto app_start($(P)$(R)) $(PORTC) 0")
-#    field(PINI, "NO")
-#}
-
-#record(bo, "$(P)$(R)AppStop") {
-#    field(DESC, "Close app")
-#    field(DTYP, "stream")
-#    field(OUT, "@visar.proto app_end($(P)$(R)) $(PORTC) 0")
-#    field(PINI, "NO")
-#}
-
-record(bo, "$(P)$(R)StartAcquisitionStream") {
-    field(DESC, "Start acquisition")
-    field(DTYP, "stream")
-    field(OUT, "@visar.proto start_capture($(P)$(R)) $(PORTC) 0")
-    field(PINI, "NO")
-}
-
-record(longout, "$(P)$(R)StartAcquisition") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_START_ACQ")
-    field(FLNK, "$(P)$(R)StartAcquisitionStream.PROC")
-    field(SCAN, "I/O Intr")
-}
-
-record(bo, "$(P)$(R)StopAcquisitionStream") {
-    field(DESC, "Stop acquisition")
-    field(DTYP, "stream")
-    field(OUT, "@visar.proto stop_capture($(P)$(R)) $(PORTC) 0")
-    field(PINI, "NO")
-}
-
-record(longout, "$(P)$(R)StopAcquisition") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_STOP_ACQ")
-    field(FLNK, "$(P)$(R)StopAcquisitionStream.PROC")
-    field(SCAN, "I/O Intr")
-}
-
-
-record(bo, "$(P)$(R)GetFrameStream") {
-    field(DESC, "Get frame")
-    field(DTYP, "stream")
-    field(OUT, "@visar.proto get_frame($(P)$(R)) $(PORTC) 0")
-    field(PINI, "NO")
-}
-
-record(longout, "$(P)$(R)GetFrame") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_GET_FRAME")
-    field(FLNK, "$(P)$(R)GetFrameStream.PROC")
-    field(SCAN, "I/O Intr")
-}
-
-
-record(bo, "$(P)$(R)StartAppStream") {
-    field(DESC, "Start App")
-    field(DTYP, "stream")
-    field(OUT, "@visar.proto start_app($(P)$(R)) $(PORTC) 0")
-    field(PINI, "NO")
-}
-
-record(longout, "$(P)$(R)StartApp") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_START_APP")
-    field(FLNK, "$(P)$(R)StartAppStream.PROC")
-    field(SCAN, "I/O Intr")
-}
-
-record(bo, "$(P)$(R)StopAppStream") {
-    field(DESC, "Stop App")
-    field(DTYP, "stream")
-    field(OUT, "@visar.proto stop_app($(P)$(R)) $(PORTC) 0")
-    field(PINI, "NO")
-}
-
-record(longout, "$(P)$(R)StopApp") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1)) VC_STOP_APP")
-    field(FLNK, "$(P)$(R)StopAppStream.PROC")
-    field(SCAN, "I/O Intr")
-}
-
-
-
-
-#########################################
-#     #
-#########################################
-
-record(longin, "$(P)$(R)BufferNotification") {
-    field(DTYP, "stream")
-    field(INP, "@visar.proto buffer_notification($(P)$(R)) $(PORTC2) 0")
-    field(SCAN, "I/O Intr")
-    field(FLNK, "$(P)$(R)BufferNotificationCalc.PROC")
-}
-
-record(longout, "$(P)$(R)FrameReady") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))VC_FRAME_READY")
-}
-
-record(calcout, "$(P)$(R)BufferNotificationCalc") {
-  field(INPA, "$(P)$(R)BufferNotification CPP MS")
-  field(CALC, "A")
-  field(OOPT,"Every Time")
-  field(OUT,"$(P)$(R)FrameReady PP")
-  field(PINI, "NO")
-}
-
-#########################################
-#     #
-#########################################
-
-record(ai, "$(P)$(R)FrameRateNotification") {
-    field(DTYP, "stream")
-    field(INP, "@visar.proto frame_rate_notification($(P)$(R)) $(PORTC2) 0")
-    field(SCAN, "I/O Intr")
-    field(FLNK, "$(P)$(R)FrameRateNotificationCalc.PROC")
-    field(EGU, "HZ")
-}
-
-record(ao, "$(P)$(R)FrameRate") {
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))VC_FRAME_RATE")
-    field(EGU, "HZ")
-}
-
-record(calcout, "$(P)$(R)FrameRateNotificationCalc") {
-  field(INPA, "$(P)$(R)FrameRateNotification CPP MS")
-  field(CALC, "A")
-  field(OOPT,"Every Time")
-  field(OUT,"$(P)$(R)FrameRate PP")
-  field(PINI, "NO")
-}
-
-
-
-
-
-
-
-
-
 
 
